# coinbase_pro_rust_api

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build_readme.sh  cargo_dev_setup.sh  rustfmt.toml  test.sh  test_mocked.sh
.github/workflows/: rust.yml
src/: api.rs  datastructs.rs  deserialization.rs  errors.rs  lib.rs  mocked.rs  order_book.rs  requests.rs  websocket_lite.rs
src/archived code/: frame.rs  tests.rs
src/datastructs/: accounts.rs  orders.rs  products.rs  websocket.rs
