[package]
name = "coinbase_pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["macros", "net"]}
tokio-native-tls = "0.3"
chrono = "0.4"
rand = "0.8"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.13"
thiserror = "1"
log = "0.4"
simple_logger = "2"
mockall = {version = "0.11", optional = true}

[features]
mock = ["mockall"]

[dev-dependencies]
tokio-test = "*"
